# Soroban-Identity

./: .gitignore  CONTRIBUTING.md  README.md  package.json
.github/workflows/: contracts-ci.yml  sdk-ci.yml
contracts/: Cargo.toml  rustfmt.toml
contracts/credential-manager/: Cargo.toml
contracts/credential-manager/src/: lib.rs
contracts/identity-registry/: Cargo.toml
contracts/identity-registry/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
contracts/tests/: lifecycle.rs
docs/: api-server.md  architecture.md  openapi.yaml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  network.ts  vite-env.d.ts
frontend/src/components/: CredentialsPanel.tsx  ErrorBoundary.tsx  IdentityPanel.tsx  ReputationChart.tsx  SkeletonCard.tsx  WalletButton.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/hooks/: useAddressHistory.ts  useCredentialExpiryCheck.ts  useFreighterAccountSync.ts  useWallet.ts  useWalletConnection.ts  useWalletSigning.ts  useWalletState.ts
frontend/src/locales/: en.json  es.json
scripts/: deploy.sh
sdk/: .eslintrc.json  CHANGELOG.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
sdk/src/: base-client.ts  contract-args.ts  credentials.test.ts  credentials.ts  errors.test.ts  errors.ts  events.test.ts  events.ts  health.ts  identity.test.ts  identity.ts  index.ts  reputation.test.ts  reputation.ts  request-queue.ts  types.ts  utils.test.ts  utils.ts  v1.ts
sdk/src/server/: api-keys.ts  (+6 more)
(+1 files in other folders)
